--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,10 @@ android {
 
 dependencies {
     implementation 'com.github.microshow:RxFFmpeg:4.9.0'
+    implementation 'com.github.tbruyelle:rxpermissions:0.12'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
