fix a bug,which made player can't play mp3.

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -48,7 +48,7 @@ set_target_properties(hidapi PROPERTIES IMPORTED_LOCATION
 # sdl library end
 
 add_library(Player SHARED
-        src/main/cpp/main.cpp
+        src/main/cpp/utils/media_info.cpp
         src/main/cpp/player/audio/audio_player.cpp)
 target_link_libraries(Player
         log
