--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.guolindev.permissionx:permissionx:1.5.1'
+
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
