--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,28 +19,39 @@
         android:extractNativeLibs="true"
         android:fullBackupContent="false"
         android:hardwareAccelerated="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_media"
         android:label="@string/app_name"
         android:preserveLegacyExternalStorage="true"
         android:requestLegacyExternalStorage="true"
         android:requestRawExternalStorageAccess="true"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_media"
         android:supportsRtl="true"
         android:theme="@style/Theme.MediaPlayer"
         android:usesCleartextTraffic="true"
         tools:targetApi="s">
+
+        <activity
+            android:name=".activity.MusicPlayActivity"
+            android:exported="false"
+            android:theme="@style/Theme.MediaPlayer" />
+
+
         <activity
             android:name=".activity.MusicListActivity"
             android:exported="true"
             android:theme="@style/Theme.MediaPlayer">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".activity.MainActivity"
-            android:exported="true" />
+
+        <service
+            android:name=".service.MusicPlayService"
+            android:enabled="true"
+            android:exported="false" />
+
     </application>
 
 </manifest>
