add permission request

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 *.iml
 .gradle
+/.idea/
+/build
+/captures
+.DS_Store
 /local.properties
 /.idea/caches
 /.idea/libraries
@@ -7,9 +11,6 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
 .externalNativeBuild
 .cxx
 local.properties
