--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,7 @@ android {
 }
 
 dependencies {
+    implementation project(path: ':music')
     implementation 'com.google.accompanist:accompanist-systemuicontroller:0.31.2-alpha'
     implementation "com.google.code.gson:gson:2.10.1"
     implementation "io.coil-kt:coil-compose:2.4.0"
