--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,9 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # Android operating system, and which are packaged with your app"s APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
-android.defaults.buildfeatures.buildconfig=true
+# Enable caching between builds.
+org.gradle.caching=true
+# Enable configuration caching between builds.
+org.gradle.unsafe.configuration-cache=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
-org.gradle.unsafe.configuration-cache=true
