--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.READ_MEDIA_AUDIO" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="cc.imorning.permission.PLAY_MUSIC" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -35,9 +36,9 @@
 
         <activity
             android:name=".activity.MusicPlayActivity"
-            android:exported="false"
+            android:exported="true"
+            android:launchMode="singleInstance"
             android:theme="@style/Theme.MediaPlayer" />
-
 
         <activity
             android:name=".activity.MusicListActivity"
@@ -54,7 +55,8 @@
             android:name=".service.MusicPlayService"
             android:enabled="true"
             android:exported="true"
-            android:foregroundServiceType="mediaPlayback">
+            android:foregroundServiceType="mediaPlayback"
+            android:permission="cc.imorning.permission.PLAY_MUSIC">
             <intent-filter>
                 <action android:name="androidx.media3.session.MediaSessionService" />
             </intent-filter>
